<resources>
    <string name="app_name">星发布</string>
    <string name="live">直播</string>
    <string name="recommend">推荐</string>
    <string name="classify">分类</string>
    <string name="action_settings">设置</string>
    <string name="title_activity_watch">WatchActivity</string>
    <string name="title_activity_watch_land">WatchLandActivity</string>

    <string name="pay_result_callback_msg">微信支付结果：%s</string>
    <string name="logout">退出登录</string>
    <string name="ok">确认</string>
    <string name="cancal">取消</string>
    <string name="starinfo">星视</string>
    <string name="myCollection">我的收藏</string>
    <string name="myMessage">我的消息</string>
    <string name="systemMessage">系统消息</string>
    <string name="myPalyrecord">播放记录</string>
    <string name="missionCenter">任务中心</string>
    <string name="jiFenShop">积分商城</string>
    <string name="clean">清除</string>
    <string name="xingfabu">星发布官方</string>
    <string name="collect_success">收藏成功</string>
    <string name="changePassword">修改密码</string>
    <string name="signin">登录</string>
    <string name="signup">注册</string>
    <string name="bindPhone">绑定手机</string>
    <string name="search">搜索</string>
    <string name="changeSelfInfo">修改个人资料</string>
    <string name="selfInfo">个人资料</string>
    <string name="playVideo">播放视频</string>
    <string name="startAdver">启动广告页</string>
    <string name="small_problem">出了点问题，请点击重试！</string>
</resources>
